awesome-media-backend/k8s/awesome-media-backend-deployment.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: awesome-media-backend
  labels:
    app: awesome-media-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awesome-media-backend
  template:
    metadata:
      labels:
        app: awesome-media-backend
    spec:
      containers:
      - name: awesome-media-backend
        image: jisang/awesome-media-backend:1.0
        #icp.ghama.io:8500/ns-edu15/awesome-media-backend:1.0
        ports:
        - containerPort: 8090
        
        imagePullPolicy: Always
        resources:
          requests:
            memory: "250Mi"
            cpu: "45m"
          limits:
            memory: "800Mi"
            cpu: "0.45"
