awesome-media-backend/k8s/awesome-media-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: awesome-media-db
spec:
  ports:
    - name: "http"
      port: 3306
      targetPort: 3306
  selector:
    app: awesome-media-db
  type: NodePort
